IMPALA-2016: Wrong fn context used cleaning up PartAggNode

A DCHECK in free-pool.h would fail because the memory being freed came
from a different pool. The problem seems to have been a little
oversight, the wrong variable was being used.

Change-Id: I5a687313c33363ea010b502547c95ef3ca2b70b0
Reviewed-on: http://gerrit.cloudera.org:8080/500
Reviewed-by: Casey Ching <casey@cloudera.com>
Tested-by: Internal Jenkins